--- a/pom.xml
+++ b/pom.xml
@@ -97,13 +97,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http:http://3.110.213.105:8081/repository/canarabank_releases/</url>
+	      <url>http://65.0.185.6:8081/repository/canarabank_releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http:http://3.110.213.105:8081/repository/canarabank_snapshot/</url>
+	      <url>http://65.0.185.6:8081/repository/canarabank_snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
